--- a/config/deployment-definition.yml
+++ b/config/deployment-definition.yml
@@ -1,22 +1,21 @@
 apiVersion: apps/v1
-kind: ReplicaSet
+kind: Deployment
 metadata:
-  name: myapp-rs
+  name: myapp-deployment
   labels:
     app: myapp
     type: front-end
 spec:
+  replicas: 4
+  selector:
+    matchLabels:
+      app: myapp
   template:
     metadata:
       name: myapp-pod
       labels:
         app: myapp
-        type: front-end
     spec:
       containers:
-        - name: nginx-container
+        - name: nginx
           image: nginx
-  replicas: 3
-  selector:
-    matchLabels:
-      type: front-end
